<resources>
    <string name="app_name">TMDB App Clone</string>

    <string name="id_hint">Username</string>
    <string name="pw_hint">Password</string>
    <string name="sign_in">SIGN IN</string>

    <string name="account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="conti">CONTINUE</string>

    <string name="movie">movie</string>
    <string name="movies">Movies</string>
    <string name="celebrities">Celebrities</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <string name="seeall">see all</string>
    <string name="nowplaying">Now playing</string>
    <string name="popular">Popular</string>
    <string name="topRated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="trending">Trending</string>

    <string name="release_date">Release date: </string>
    <string name="country">Country</string>
    <string name="language">Language: </string>
    <string name="revenue">Revenue: </string>
    <string name="overview">overview:</string>
    <string name="actor">Actors</string>
    <string name="video">Video</string>
    <string name="similar">Similar</string>
    <string name="similarmovier">Similar Movies</string>

    <string name="known">Known for</string>
    <string name="birthplace">Birthplace</string>
    <string name="companies">Birth Day</string>
    <string name="biography">Biography</string>

    <string name="search_movie">Search Any Movie</string>
    <string name="search_actor">Search Any Actor</string>

    <string name="saved">Saved</string>
    <string name="profilelanguage">Language</string>
    <string name="contact">Contact</string>
    <string name="about">About app</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>

    <string name="logout_check_title">Sign out ofthe account</string>
    <string name="logout_check_detail">If you want to leave the profile, click Yes, if you don\'t want to leave, clicke No</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>

    <string name="my_saved">My saved</string>
    <string name="english">English</string>

    <string name="accountCheck">accountCheck</string>
    <string name="accountID">accountID</string>
    <string name="sessionID">sessionID</string>
    <string name="movieID">movieID</string>
    <string name="actorID">actorID</string>
    <string name="seeAllMovie">seeAllMovie</string>
    <string name="seeAllActor">seeAllActor</string>
    <string name="imgUrl">imgUrl</string>
    <string name="videoKey">videoKey</string>

    <string name="credit">credit</string>
    <string name="name">Name</string>

    <string name="contactDetail">This application is created by Muhammadsiddiq, Android Developer. All information is taken from the themoviedb.org website. Your account data is also stored on the themoviedb.org website. If you face any problems while using this application, you can contact me via email, telegram, Linkedin or Instagram. Thank you for choosing this application</string>
    <string name="connection">connection</string>
    <string name="aboutDetail">Information about the TMDB site\n\n The Movie Database (TMDB) is a community built movie and TV database. Every piece of data has been added by our amazing community dating back to 2008. TMDb\'s strong international focus and breadth of data is largely unmatched and something we\'re incredibly proud of. Put simply, we live and breathe community and that\'s precisely what makes us different. The TMDB Advantage\n\n1\nEvery year since 2008, the number of contributions to our database has increased. With over 400,000 developers and companies using our platform, TMDB has become a premiere source for metadata.\n\n2\nAlong with extensive metadata for movies, TV shows and people, we also offer one of the best selections of high resolution posters and fanart. On average, over 1,000 images are added every single day.\n\n3\nWe\'re international. While we officially support 39 languages we also have extensive regional data. Every single day TMDB is used in over 180 countries.\n\n4\nOur community is second to none. Between our staff and community moderators, we\'re always here to help. We\'re passionate about making sure your experience on TMDB is nothing short of amazing.\n\n5\nTrusted platform. Every single day our service is used by millions of people while we process over 3 billion requests. We\'ve proven for years that this is a service that can be trusted and relied on.</string>

    <string name="giverating">Give Rating</string>
    <string name="ratinghint">0.0</string>
    <string name="split">/</string>
    <string name="perfectrating">10.0</string>

    <string name="network_off">Please check the internet and try again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--<string name=""></string>-->
</resources>