<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_movies"
        android:enabled="true"
        android:title="@string/movies" />
    <item
        android:id="@+id/navigation_celebrities"
        android:icon="@drawable/ic_celebrities"
        android:enabled="true"
        android:title="@string/celebrities" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_menu_search"
        android:enabled="true"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:enabled="true"
        android:title="@string/profile" />
</menu>