<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.tmdb.ui.viewmodel.DetailMovieViewmodel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.GiveRatingFragment">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_orangestroke_black"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/giverating"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="60dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="32sp"
                    android:gravity="center_horizontal"
                    android:hint="@string/ratinghint"
                    android:textColorHint="@color/gray"
                    android:text="@={viewmodel.rating}"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/split"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"
                    android:text="@string/perfectrating"
                    android:textSize="32sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_button_white"
                    android:paddingHorizontal="40dp"
                    android:layout_toStartOf="@+id/btn_no"
                    android:layout_marginEnd="20dp"
                    android:text="@string/yes"
                    android:textColor="@color/logincolor"
                    android:onClick="@{()->viewmodel.giveRating(true)}" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_no"
                    android:background="@drawable/bg_round_button_theme_color"
                    android:paddingHorizontal="40dp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/No"
                    android:textColor="@color/white"
                    android:onClick="@{()->viewmodel.giveRating(false)}" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>