<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.tmdb.presentation.viewmodel.LoginViewmodel" />
    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.LoginActivity"
        android:background="@color/black"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="@dimen/log_in_padding_horizontal">

        <ImageView
            android:layout_width="@dimen/log_in_img_logo_width"
            android:layout_height="@dimen/log_in_img_logo_height"
            android:background="@drawable/bg_orangestroke_black"
            android:src="@drawable/img_main_logo"
            android:layout_marginTop="@dimen/log_in_margin_top_logo"
            android:paddingHorizontal="@dimen/log_in_padding_horizontal_logo"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_id"
            android:hint="@string/id_hint"
            android:textColorHint="@color/gray"
            android:layout_marginTop="@dimen/log_in_margin_logo_id"
            android:inputType="text"
            android:textSize="@dimen/log_in_text_id"
            android:paddingVertical="@dimen/log_in_padding_vertical_id"
            android:paddingHorizontal="@dimen/log_in_padding_horizontal_id"
            android:text="@={viewmodel.id}"
            android:textColor="@color/black"
            android:background="@drawable/bg_orangestroke_white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_pw"
            android:hint="@string/pw_hint"
            android:textColorHint="@color/gray"
            android:layout_marginTop="@dimen/log_in_margin_id_password"
            android:inputType="textPassword"
            android:textSize="@dimen/log_in_text_id"
            android:paddingVertical="@dimen/log_in_padding_vertical_id"
            android:paddingHorizontal="@dimen/log_in_padding_horizontal_id"
            android:text="@={viewmodel.password}"
            android:textColor="@color/black"
            android:background="@drawable/bg_orangestroke_white"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/log_in_margin_password_sign_in"
            android:background="@drawable/bg_orangestroke_black"
            android:onClick="@{()->viewmodel.clickedSignIn()}"
            android:paddingVertical="@dimen/padding_vertical_btn"
            android:text="@string/sign_in"
            android:textColor="@color/logincolor"
            android:textSize="@dimen/text_btn_large"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/log_in_margin_sign_in_up"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:layout_marginStart="@dimen/log_in_margin_start_sign_up"
                android:text="@string/sign_up"
                android:textSize="@dimen/log_in_text_sign_up"
                android:textColor="@color/logincolor"
                android:onClick="@{()->viewmodel.signUp()}"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_continue"
            android:background="@drawable/bg_orangestroke_black"
            android:layout_marginTop="@dimen/log_in_margin_sign_up_guest"
            android:text="@string/conti"
            android:paddingVertical="@dimen/padding_vertical_btn"
            android:textSize="@dimen/text_btn_large"
            android:textStyle="bold"
            android:textColor="@color/logincolor"
            android:onClick="@{()->viewmodel.servieceContinue()}"/>
    </LinearLayout>
</layout>