<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.tmdb.presentation.viewmodel.MainViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_check_logout"
        tools:context=".ui.fragment.profile.LogoutCheckFragment">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/give_rating_margin_horizontal"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_orangestroke_black"
            android:padding="@dimen/give_rating_padding"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/logout_check_title"
                android:textSize="@dimen/text_detail_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_margin"
                android:textColor="@color/logincolor"
                android:text="@string/logout_check_detail"
                android:textSize="@dimen/text_detail_item" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/layout_margin_top">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_button_white"
                    android:paddingHorizontal="@dimen/btn_padding_horizontal"
                    android:layout_toStartOf="@+id/btn_no"
                    android:layout_marginEnd="@dimen/give_rating_padding"
                    android:text="@string/yes"
                    android:textColor="@color/logincolor"
                    android:onClick="@{()->viewmodel.startLoginActivity(true)}"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_no"
                    android:background="@drawable/bg_round_button_theme_color"
                    android:paddingHorizontal="@dimen/btn_padding_horizontal"
                    android:layout_alignParentEnd="true"
                    android:text="@string/No"
                    android:textColor="@color/white"
                    android:onClick="@{()->viewmodel.startLoginActivity(false)}"/>

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>