<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.tmdb.presentation.viewmodel.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        tools:context=".ui.fragment.profile.ContactFragment">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_title">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_title"
                android:textColor="@color/logincolor" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/contact_margin_top"
            android:text="@string/contactDetail"
            android:paddingHorizontal="@dimen/contact_padding_horizontal"
            android:textSize="@dimen/text_detail_name"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection"
            android:gravity="center_horizontal"
            android:textColor="@color/connectioncolor"
            android:layout_marginTop="@dimen/contact_margin_connection"
            android:textSize="@dimen/text_connection" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_contact_height"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/contact_margin_ic">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:layout_marginHorizontal="@dimen/contact_margin_horizontal"
                android:scaleType="centerCrop"
                android:onClick="@{()->viewmodel.clickedConnection(0)}"
                android:src="@drawable/ic_telegram" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:layout_marginHorizontal="@dimen/contact_margin_horizontal"
                android:scaleType="centerInside"
                android:src="@drawable/ic_instagram"
                android:onClick="@{()->viewmodel.clickedConnection(1)}"/>

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:layout_marginHorizontal="@dimen/contact_margin_horizontal"
                android:scaleType="centerInside"
                android:src="@drawable/ic_linkedin"
                android:onClick="@{()->viewmodel.clickedConnection(2)}"/>
        </LinearLayout>
    </LinearLayout>
</layout>