<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.tmdb.presentation.viewmodel.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context=".ui.fragment.ProfileFragment">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_title"
            app:title="@string/profile"
            app:titleTextColor="@color/white"
            android:paddingHorizontal="@dimen/contact_padding_horizontal"
            android:id="@+id/title_movies" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:id="@+id/layer_profile"
            android:orientation="vertical"
            android:visibility="gone">
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/img_profile"
                android:layout_height="@dimen/img_profile"
                android:layout_marginTop="@dimen/contact_margin_ic"
                app:cardCornerRadius="@dimen/profile_radius">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/img_profile"
                    android:background="@color/white"
                    android:src="@drawable/ic_profile_img"
                    app:tint="@color/profilecolor"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_detail_item"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/detail_item_margin_top"
                android:text="@={viewmodel.name}"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_profile_id"
                android:textColor="@color/logincolor"
                android:layout_marginTop="@dimen/detail_smal_margin"
                android:text="@={viewmodel.id}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layer_profile"
            android:id="@+id/layer_saved"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:layout_marginStart="@dimen/profile_margin_start"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:onClick="@{()->viewmodel.clickedSaved()}">

            <ImageView
                android:layout_width="@dimen/img_profile_item"
                android:layout_height="@dimen/img_profile_item"
                android:src="@drawable/ic_fill_bookmarker"
                app:tint="@color/logincolor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/profile_margin_start"
                android:text="@string/saved"
                android:textSize="@dimen/text_detail_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layer_profile"
            android:id="@+id/layer_language"
            android:layout_marginStart="@dimen/profile_margin_start"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:onClick="@{()->viewmodel.clickedLanguage()}">

            <ImageView
                android:layout_width="@dimen/img_profile_item"
                android:layout_height="@dimen/img_profile_item"
                android:src="@drawable/ic_language"
                app:tint="@color/logincolor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/profile_margin_start"
                android:text="@string/profilelanguage"
                android:textSize="@dimen/text_detail_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layer_profile"
            android:id="@+id/layer_contact"
            android:layout_marginStart="@dimen/detail_smal_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:onClick="@{()->viewmodel.clickedContact()}">

            <ImageView
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:src="@drawable/ic_contact"
                app:tint="@color/logincolor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/detail_smal_margin"
                android:text="@string/contact"
                android:textSize="@dimen/text_detail_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layer_profile"
            android:id="@+id/layer_about"
            android:layout_marginStart="@dimen/detail_smal_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:onClick="@{()->viewmodel.clickedAbout()}">

            <ImageView
                android:layout_width="@dimen/img_profile_item"
                android:layout_height="@dimen/img_profile_item"
                android:src="@drawable/ic_about"
                app:tint="@color/logincolor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/profile_margin_start"
                android:text="@string/about"
                android:textSize="@dimen/text_detail_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layer_profile"
            android:id="@+id/layer_log"
            android:layout_marginStart="@dimen/profile_margin_start"
            android:onClick="@{()->viewmodel.checkLogOut()}"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/img_profile_item"
                android:layout_height="@dimen/img_profile_item"
                android:src="@drawable/ic_log_in"
                android:id="@+id/img_log"
                app:tint="@color/logincolor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/profile_margin_start"
                android:text="@={viewmodel.log}"
                android:textSize="@dimen/text_detail_name" />
        </LinearLayout>
    </LinearLayout>
</layout>