<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.tmdb.presentation.viewmodel.MainViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.fragment.SearchFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layer_search_height"
            android:orientation="horizontal"
            android:background="@color/black"
            android:gravity="center_vertical"
            android:id="@+id/toolbar"
            android:padding="@dimen/detail_margin"
            android:layout_marginTop="@dimen/detail_margin">

            <EditText
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="match_parent"
                android:background="@drawable/bg_title"
                android:hint="@string/search"
                android:text="@={viewmodel.searchKeyword}"
                android:textSize="@dimen/text_detail_name"
                android:textColorHint="@color/gray"
                android:textColor="@color/white"
                android:paddingHorizontal="@dimen/log_in_id_padding_horizontal" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/bg_themestroke"
                android:src="@drawable/ic_search"
                android:scaleType="centerInside"
                android:layout_marginStart="@dimen/search_margin_start"
                android:padding="@dimen/log_in_id_padding_horizontal"
                app:tint="@color/white"
                android:onClick="@{()->viewmodel.searchKeyword()}"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/img_back"
            android:layout_below="@+id/toolbar">

            <ImageView
                android:layout_width="@dimen/img_search"
                android:layout_height="@dimen/img_search"
                android:src="@drawable/ic_search"
                android:layout_centerInParent="true"
                app:tint="@color/white"
                android:id="@+id/img_search" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_search"
                android:textColor="@color/white"
                android:text="@={viewmodel.textSearchAny}"
                android:textSize="@dimen/text_detail_name"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_margin_top"/>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollview"
            android:layout_below="@+id/toolbar"
            android:padding="@dimen/fragment_padding">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_search"/>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_size"
            android:background="@drawable/bg_title"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/btn_padding_horizontal"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/layout_margin_top"
            android:padding="@dimen/tin_padding">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_movies"
                android:textSize="@dimen/text_detial_normal"
                android:background="@color/logincolor"
                android:text="@string/movies"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:onClick="@{()-> viewmodel.selectSearchAny(true)}"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_actors"
                android:background="@color/black"
                android:textSize="@dimen/text_detial_normal"
                android:text="@string/actor"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:onClick="@{()-> viewmodel.selectSearchAny(false)}"/>
        </LinearLayout>
    </RelativeLayout>
</layout>